--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Glittergruvan</h1>
     <div class="mining-animation">
-      <img src="mining-animation.svg" alt="Mining Animation" />
+      <img src="mining-animation.png" alt="Mining Animation" />
     </div>
     <div class="price-ticker">
       <span id="btc">BTC: ...</span>
@@ -35,3 +35,4 @@
   </script>
 </body>
 </html>
+
