--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Glittergruvan</h1>
     <div class="mining-animation">
-      <img src="mining-animation.png" alt="Mining Animation" />
+      <img src="mining-animation-removebg-preview.png" alt="Mining Animation" />
     </div>
     <div class="price-ticker">
       <span id="btc">BTC: ...</span>
@@ -37,5 +37,6 @@
 
 </body>
 </html>
+
 
 
